--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,20 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">@color/colorPrimary_500</color>
+    <color name="colorPrimaryVariant">@color/colorPrimary_700</color>
+    <color name="colorOnPrimary">@color/white</color>
+
+    <color name="colorPrimary_100">#b9ddf9</color>
+    <color name="colorPrimary_200">#8dc8f6</color>
+    <color name="colorPrimary_300">#5fb3f2</color>
+    <color name="colorPrimary_400">#39a3f0</color>
+    <color name="colorPrimary_500">#0294ee</color>
+    <color name="colorPrimary_600">#0086e0</color>
+    <color name="colorPrimary_700">#0074ce</color>
+    <color name="colorPrimary_800">#0063bc</color>
+    <color name="colorPrimary_900">#00459d</color>
+
+
 </resources>
