--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,6 @@
                 android:background="@color/white"
                 android:inputType="textPassword"
                 android:paddingStart="0dp"
-                android:text="12345678"
                 android:hint="Password"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -55,14 +54,48 @@
             android:text="Lupa Kata Sandi ?"/>
 
         <com.google.android.material.button.MaterialButton
+            android:textSize="@dimen/_13sdp"
             android:text="Masuk"
             android:textAllCaps="false"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_45sdp"/>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_15sdp">
+
+            <View
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/text1"
+                android:id="@+id/lineleft"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#CDCDCD"/>
+
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="end"
+                android:layout_marginHorizontal="@dimen/_15sdp"
+                android:text="atau masuk dengan" />
+
+            <View
+                android:layout_toRightOf="@+id/text1"
+                android:layout_centerVertical="true"
+                android:id="@+id/lineright"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#CDCDCD"/>
+
+        </RelativeLayout>
+
         <com.google.android.material.button.MaterialButton
             android:text="Masuk"
             style="@style/Button.OutLineBox"
+            android:textSize="@dimen/_13sdp"
             android:textAllCaps="false"
             android:layout_width="match_parent"
             android:textColor="#939393"
@@ -70,6 +103,27 @@
             app:iconSize="@dimen/_19sdp"
             android:layout_height="@dimen/_45sdp"
             app:iconTint="@null"/>
+
+        <LinearLayout
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Belum punya akun ?" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimary"
+                android:text="Daftar" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
